--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Wallets</ion-title>
   </ion-navbar>
 </ion-header>
 
