--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -8,11 +8,13 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <button ion-button secondary (click)="createWallet()">New Wallet</button>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-card>
+    <ion-list>
+      <ion-item>
+        Wallet
+      </ion-item>
+    </ion-list>
+  </ion-card>
 </ion-content>
