Add list of wallets (and backup files)

--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -12,8 +12,8 @@
 
   <ion-card>
     <ion-list>
-      <ion-item>
-        Wallet
+      <ion-item *ngFor="let wallet of wallets">
+        {{ wallet.name }}
       </ion-item>
     </ion-list>
   </ion-card>
