Add delete wallet

--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -13,6 +13,7 @@
   <ion-card *ngFor="let wallet of wallets">
     <h2>{{ wallet.name }}</h2>
     <button ion-button secondary (click)="createAddress(wallet)">New Address</button>
+    <button ion-button danger (click)="deleteWallet(wallet)">Delete Wallet</button>
     <ion-list>
       <ion-item *ngFor="let address of wallet.addresses">{{ address | json }}</ion-item>
     </ion-list>
