--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -10,12 +10,12 @@
 <ion-content padding>
   <button ion-button secondary (click)="createWallet()">New Wallet</button>
 
-  <ion-card *ngFor="let wallet of wallets">
+  <ion-card *ngFor="let wallet of wallets" (click)="openWallet(wallet)">
     <h2>{{ wallet.name }}</h2>
     <button ion-button secondary (click)="createAddress(wallet)">New Address</button>
     <button ion-button danger (click)="deleteWallet(wallet)">Delete Wallet</button>
-    <ion-list>
-      <ion-item *ngFor="let address of wallet.addresses">{{ address | json }}</ion-item>
+    <ion-list *ngIf="wallet.entries">
+      <ion-item *ngFor="let address of wallet.entries">{{ address | json }}</ion-item>
     </ion-list>
   </ion-card>
 </ion-content>
