--- a/src/pages/wallet-detail/wallet-detail.html
+++ b/src/pages/wallet-detail/wallet-detail.html
@@ -12,7 +12,7 @@
     <ion-item-divider color="light">Addresses</ion-item-divider>
     <ion-item *ngFor="let address of (wallet.entries ? wallet.entries: [])">
       <h2>{{ address.address }}</h2>
-      <p>{{ address.pubkey }}</p>
+      <p>Balance: {{ address.balance }}</p>
     </ion-item>
     <ion-item (click)="createAddress()"><i>Click to add an address</i></ion-item>
   </ion-list>
