Add send button

--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -10,7 +10,11 @@
 
 <ion-content>
   <div class="sky-header">
-
+    <ion-fab right bottom>
+      <button ion-fab color="danger">
+        <ion-icon name="ios-send"></ion-icon>
+      </button>
+    </ion-fab>
   </div>
   <ion-list>
     <ion-item-divider color="light">Wallets</ion-item-divider>
