Add send skycoin page

--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -9,9 +9,9 @@
 
 
 <ion-content>
-  <div class="sky-header">
+  <div class="sky-header-light">
     <ion-fab right bottom>
-      <button ion-fab color="danger">
+      <button ion-fab color="danger" (click)="openSendPage()">
         <ion-icon name="ios-send"></ion-icon>
       </button>
     </ion-fab>
