--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -10,6 +10,7 @@
 
 <ion-content>
   <div class="sky-header-light">
+    <div counto [step]="30" [countTo]="sum" [countFrom]="0" [duration]="4" (countoChange)="counto = $event">{{counto | sky }}</div>
     <ion-fab right bottom>
       <button ion-fab color="danger" (click)="openSendPage()">
         <ion-icon name="ios-send"></ion-icon>
@@ -21,7 +22,7 @@
     <ion-item-sliding *ngFor="let wallet of wallets">
       <ion-item (click)="openWallet(wallet)">
         <h2>{{ wallet.id }}</h2>
-        <p>Balance: not yet added</p>
+        <p>Balance: {{ wallet.balance | sky }}</p>
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" (click)="deleteWallet(wallet)">
