--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -30,6 +30,6 @@
         </button>
       </ion-item-options>
     </ion-item-sliding>
-    <ion-item (click)="createWallet()"><i>Click to add a wallet</i></ion-item>
+    <ion-item (click)="openNewWalletPage()"><i>Click to add a wallet</i></ion-item>
   </ion-list>
 </ion-content>
