--- a/src/pages/new-wallet/new-wallet.html
+++ b/src/pages/new-wallet/new-wallet.html
@@ -8,15 +8,15 @@
 
 <ion-content class="split-background">
   <div class="material-paper">
-    <ion-list>
+    <ion-list [formGroup]="form">
       <ion-item>
         <ion-label color="primary" stacked>Seed</ion-label>
-        <ion-textarea rows="6" placeholder="..."></ion-textarea>
+        <ion-textarea formControlName="seed" rows="5" placeholder="..."></ion-textarea>
       </ion-item>
     </ion-list>
     <div class="buttons">
       <button ion-button color="light" round class="inline-button" (click)="generateSeed()">New seed</button>
-      <button ion-button round class="inline-button">Create</button>
+      <button ion-button round class="inline-button" (click)="createWallet()">Create</button>
     </div>
   </div>
 </ion-content>
