--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -10,7 +10,7 @@
 
 <ion-content>
   <div class="sky-header-light">
-    <h1 counto [step]="60" [countTo]="sum" [countFrom]="0" [duration]="1" (countoChange)="counto = $event">{{counto | sky }}</h1>
+    <h1><balance [amount]="wallet.sum() | async"></balance></h1>
     <ion-fab right bottom>
       <button ion-fab color="danger" (click)="openSendPage()">
         <ion-icon name="ios-send"></ion-icon>
@@ -19,10 +19,10 @@
   </div>
   <ion-list>
     <ion-item-divider color="light">Wallets</ion-item-divider>
-    <ion-item-sliding *ngFor="let wallet of wallets">
+    <ion-item-sliding *ngFor="let wallet of wallet.all() | async">
       <ion-item (click)="openWallet(wallet)">
         <h2>{{ wallet.id }}</h2>
-        <p>Balance: {{ wallet.balance | sky }}</p>
+        <p>Balance: <balance [amount]="wallet.balance ? wallet.balance : null"></balance></p>
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" (click)="deleteWallet(wallet)">
