--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -1,9 +1,11 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>Wallets</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="refreshData()">
+        <ion-icon class="header-action-right" name="refresh"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
