Prepare for beta 2

--- a/src/pages/pincode/pincode.html
+++ b/src/pages/pincode/pincode.html
@@ -10,7 +10,7 @@
         <p>Please confirm your PIN #.</p>
       </div>
       <div id="logo" *ngIf="status < 2">
-        <img src="/assets/logo/Skycoin+Logo+White.png">
+        <img src="/assets/logo/logo-white.png">
       </div>
 
       <div id="fields" [ngClass]="{'miss': showError}">
