--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -21,13 +21,13 @@
   </div>
   <ion-list>
     <ion-item-divider color="light">
-      <div class="line-left">Wallet</div>
-      <div class="line-right">Balance</div>
+      <div class="column-60">Wallet</div>
+      <div class="column-40">Balance</div>
     </ion-item-divider>
     <ion-item-sliding *ngFor="let wallet of wallet.all() | async">
       <ion-item (click)="openWallet(wallet)">
-        <div class="line-left">{{ wallet.label ? wallet.label : 'No label' }}</div>
-        <div class="line-right"><balance [amount]="wallet.balance ? wallet.balance : null"></balance></div>
+        <div class="column-60">{{ wallet.label ? wallet.label : 'No label' }}</div>
+        <div class="column-40"><balance [amount]="wallet.balance ? wallet.balance : null"></balance></div>
       </ion-item>
       <ion-item-options side="right">
         <button ion-button color="danger" (click)="deleteWallet(wallet)">
