--- a/src/pages/wallet-detail/wallet-detail.html
+++ b/src/pages/wallet-detail/wallet-detail.html
@@ -6,19 +6,28 @@
 
 <ion-content>
   <div class="sky-header-dark">
-    <h1> <balance [amount]="wallet.balance"></balance></h1>
+    <h1> {{ wallet.balance | sky }} sky</h1>
   </div>
   <ion-list>
     <ion-item-divider color="light">
       <div class="column-20">ID</div>
-      <div class="column-50">Address</div>
-      <div class="column-30">Balance</div>
+      <div class="column-60">Address</div>
+      <div class="column-20">Balance</div>
     </ion-item-divider>
-    <ion-item *ngFor="let address of (wallet.entries||[]); let i = index" (click)="copy(address)">
+    <ion-item *ngFor="let address of (wallet.entries||[]); let i = index" (click)="open(address)">
       <div class="column-20">{{ i + 1 }}</div>
-      <div class="column-50 address-column">{{ address.address | address }}</div>
-      <div class="column-30">{{ address.balance | sky }}</div>
+      <div class="column-60 address-column">{{ address.address | address }}</div>
+      <div class="column-20">{{ address.balance | sky }}</div>
     </ion-item>
     <ion-item (click)="createAddress()"><i>Click to add an address</i></ion-item>
   </ion-list>
+
+  <div class="overlay" id="overlay" *ngIf="address">
+    <div class="modal-content">
+      <span class="button-close" (click)="closeModal()"></span>
+      <qr-code [address]="address"></qr-code>
+      <h5 (click)="copy(this.address)">{{ address.address }} <ion-icon name="copy"></ion-icon></h5>
+    </div>
+  </div>
+
 </ion-content>
