--- a/src/pages/add-wallet/add-wallet.html
+++ b/src/pages/add-wallet/add-wallet.html
@@ -14,6 +14,10 @@
       <ion-label stacked>Seed</ion-label>
       <ion-textarea formControlName="seed" rows="3" placeholder="..."></ion-textarea>
     </div>
+    <p class="warning-text">
+      Important! Always have a back-up available of this seed, your device might delete your seed in various situations.
+      If you lose it, you won't be able to access your wallet again.
+    </p>
     <div class="buttons">
       <button ion-button round class="-light" (click)="cancel()">Cancel</button>
       <button ion-button round class="-main" [disabled]="!form.valid" (click)="createWallet()">Create</button>
