Fix transactions display

--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -1,20 +1,22 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Transactions</ion-title>
+<ion-header no-border>
+  <ion-navbar transparent mode="ios">
+    <ion-title mode="ios">Transactions</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content id="pages-transactions">
+  <div class="-header primary-header-background"></div>
   <ion-list>
-    <ion-item-divider color="light">
+    <ion-item-divider>
       <div class="column-30">Date</div>
       <div class="column-50">Transaction</div>
       <div class="column-20">Conf</div>
     </ion-item-divider>
-    <ion-item *ngFor="let transaction of transactions">
+    <ion-item ion-item mode="ios" *ngFor="let transaction of transactions">
       <div class="column-30"> {{ transaction.timestamp * 1000 | date:'MMM d' }} </div>
       <div class="column-50"> {{ transaction.txid | address }} </div>
       <div class="column-20"> <ion-icon name="{{ transaction.status.confirmed ? 'checkmark' : 'close' }}"></ion-icon> </div>
     </ion-item>
   </ion-list>
+  <tabs></tabs>
 </ion-content>
