[pincode] refs #4 - Add backspace for entering pincode Adding backspace functionality for the entering pincode screen. Added the real icon for button.

--- a/src/pages/pincode/pincode.html
+++ b/src/pages/pincode/pincode.html
@@ -48,7 +48,7 @@
 
           <div class="grid-col width-33"></div>
           <div class="grid-col width-33" (click)="pressNumber(0)"><button>0</button></div>
-          <div class="grid-col width-33" (click)="pressBackSpace()">"<"</div>
+          <div class="grid-col width-33" (click)="pressBackSpace()"><button><img src="/assets/img/backspace-black.png"></button></div>
 
         </div>
       </div>
