modal -border shadow -position -widt

--- a/src/pages/add-wallet/add-wallet.html
+++ b/src/pages/add-wallet/add-wallet.html
@@ -23,4 +23,5 @@
       <button ion-button round class="-main" [disabled]="!form.valid" (click)="createWallet()">Create</button>
     </div>
   </div>
+  <modal header="Disclaimer"></modal>
 </ion-content>
