--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -1,24 +1,12 @@
-<ion-header no-border>
-  <ion-navbar transparent mode="ios">
-    <ion-title mode="ios">Wallets</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="refreshData()">
-        <ion-icon class="header-action-right" name="refresh"></ion-icon>
-      </button>
-    </ion-buttons>
-  </ion-navbar>
-</ion-header>
+<app-header title="Wallets"></app-header>
 
 
-<ion-content id="pages-wallets">
-  <div class="-header primary-header-background">
-    <h1>{{ sum }} <span>sky</span></h1>
-  </div>
+<ion-content padding>
   <ion-list>
     <ion-item-divider>
-      <div class="column-40">Wallet</div>
-      <div class="column-30">Hours</div>
-      <div class="column-30">Balance</div>
+      <div>Wallet</div>
+      <div>Hours</div>
+      <div>Balance</div>
     </ion-item-divider>
     <ion-item-sliding *ngFor="let wallet of wallet.all() | async">
       <button ion-item mode="ios" (click)="openWallet(wallet)">
@@ -32,17 +20,7 @@
         </button>
       </ion-item-options>
     </ion-item-sliding>
-
-    <div class="-action-buttons">
-      <button ion-button round (click)="addWallet()">
-        <img src="assets/img/plus-gold.png"> Add Wallet
-      </button>
-      <button ion-button round (click)="loadWallet()">
-        <img src="assets/img/load-gold.png"> Load Wallet
-      </button>
-    </div>
-
-    <!--<div class="list-link" (click)="openTransactions()">Transaction history</div>-->
   </ion-list>
+
   <tabs></tabs>
 </ion-content>
