--- a/src/pages/wallets/wallets.html
+++ b/src/pages/wallets/wallets.html
@@ -1,6 +1,6 @@
 <app-header title="Wallets"></app-header>
 <ion-content>
-  <ion-list>
+  <ion-list id="pages-wallets">
     <ion-item-divider>
       <ion-grid>
         <ion-row>
