--- a/src/pages/pincode/pincode.html
+++ b/src/pages/pincode/pincode.html
@@ -20,7 +20,7 @@
         <p>Please confirm your PIN #.</p>
       </div>
       <div id="logo" *ngIf="status < 2">
-        <img src="/assets/logo/logo-white.png">
+        <img src="../assets/logo/logo-white.png">
       </div>
 
       <div id="fields" [ngClass]="{'miss': showError}">
