--- a/src/pages/pincode/pincode.html
+++ b/src/pages/pincode/pincode.html
@@ -1,58 +1,92 @@
 <ion-content id="pincode">
-  <modal [header]="'IMPORTANT!'"  *ngIf="!storageAvailable">
+  <modal [header]="'IMPORTANT!'" *ngIf="!storageAvailable">
     <p>
-      We could not instantiate our secure storage service on your device. This means you cannot set a pincode and/or
-      save your wallet seeds on your device. Whenever you want to transfer funds out of your wallet, you will be
-      requested to enter your wallet seed again. <b>Without your seed your funds will most likely be irretrievably
-      lost.</b>
+      We could not instantiate our secure storage service on your device. This means you cannot set a pincode and/or save your
+      wallet seeds on your device. Whenever you want to transfer funds out of your wallet, you will be requested to enter
+      your wallet seed again.
+      <b>Without your seed your funds will most likely be irretrievably lost.
+      </b>
     </p>
     <button ion-button color="light" round class="-continue" (click)="disableSecure()">Continue</button>
   </modal>
 
-  <div class="table sky-container" [ngClass]="{ blurred: !storageAvailable }">
+  <div *ngIf="display" class="table sky-container" [ngClass]="{ blurred: !storageAvailable }">
     <div class="cell">
       <div class="pin-instructions" *ngIf="status === 2">
-        <h2>Create a PIN</h2>
-        <p>This PIN # will be used to open the wallet. Don't forget your pin. If you do, you may lose access to your mobile wallet.</p>
+        <h2>Set a PIN #</h2>
+        <p>This PIN # will used to open the wallet. Don't forget it; if you do, you may lose access to your mobile wallet.</p>
       </div>
       <div class="pin-instructions" *ngIf="status === 3">
-        <h2>Confirm PIN</h2>
-        <p>Please confirm your PIN #.</p>
+        <h2>Confirm PIN #</h2>
+        <p>Enter your pin once more to continue.</p>
       </div>
       <div id="logo" *ngIf="status < 2">
-        <img src="/assets/logo/logo-white.png">
+        <img src="assets/logo/logo-white.png">
       </div>
 
-      <div id="fields" [ngClass]="{'miss': showError}">
-        <div class="grid-row">
-          <div class="grid-col width-25 numberfield" [ngClass]="{'active': pin.length >= 1}"><span></span></div>
-          <div class="grid-col width-25 numberfield" [ngClass]="{'active': pin.length >= 2}"><span></span></div>
-          <div class="grid-col width-25 numberfield" [ngClass]="{'active': pin.length >= 3}"><span></span></div>
-          <div class="grid-col width-25 numberfield" [ngClass]="{'active': pin.length >= 4}"><span></span></div>
-        </div>
-      </div>
+      <ion-grid id="fields" [ngClass]="{'miss': showError}">
+        <ion-row>
+          <ion-col col-3 [ngClass]="{'active': pin.length >= 1}">
+            <span></span>
+          </ion-col>
+          <ion-col col-3 [ngClass]="{'active': pin.length >= 2}">
+            <span></span>
+          </ion-col>
+          <ion-col col-3 [ngClass]="{'active': pin.length >= 3}">
+            <span></span>
+          </ion-col>
+          <ion-col col-3 [ngClass]="{'active': pin.length >= 4}">
+            <span></span>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
-      <div id="numbers">
-        <div class="grid-row">
-          <div class="grid-col width-33" (click)="pressNumber(1)"><button>1</button></div>
-          <div class="grid-col width-33" (click)="pressNumber(2)"><button>2</button></div>
-          <div class="grid-col width-33" (click)="pressNumber(3)"><button>3</button></div>
-
-          <div class="grid-col width-33" (click)="pressNumber(4)"><button>4</button></div>
-          <div class="grid-col width-33" (click)="pressNumber(5)"><button>5</button></div>
-          <div class="grid-col width-33" (click)="pressNumber(6)"><button>6</button></div>
-
-          <div class="grid-col width-33" (click)="pressNumber(7)"><button>7</button></div>
-          <div class="grid-col width-33" (click)="pressNumber(8)"><button>8</button></div>
-          <div class="grid-col width-33" (click)="pressNumber(9)"><button>9</button></div>
-
-          <div class="grid-col width-33"></div>
-          <div class="grid-col width-33" (click)="pressNumber(0)"><button>0</button></div>
-          <div class="grid-col width-33"></div>
-
-        </div>
-      </div>
-
+      <ion-grid id="numbers">
+        <ion-row>
+          <ion-col col-4>
+            <div (click)="pressNumber(1)">1</div>
+          </ion-col>
+          <ion-col col-4>
+            <div (click)="pressNumber(2)">2</div>
+          </ion-col>
+          <ion-col col-4>
+            <div (click)="pressNumber(3)">3</div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4>
+            <div (click)="pressNumber(4)">4</div>
+          </ion-col>
+          <ion-col col-4>
+            <div (click)="pressNumber(5)">5</div>
+          </ion-col>
+          <ion-col col-4>
+            <div (click)="pressNumber(6)">6</div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4>
+            <div (click)="pressNumber(7)">7</div>
+          </ion-col>
+          <ion-col col-4>
+            <div (click)="pressNumber(8)">8</div>
+          </ion-col>
+          <ion-col col-4>
+            <div (click)="pressNumber(9)">9</div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-4></ion-col>
+          <ion-col col-4>
+            <div (click)="pressNumber(0)">0</div>
+          </ion-col>
+          <ion-col col-4>
+            <div (click)="pressBack()">
+              <ion-icon name="backspace"></ion-icon>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </div>
   </div>
 </ion-content>
