--- a/src/pages/pincode/pincode.html
+++ b/src/pages/pincode/pincode.html
@@ -9,84 +9,106 @@
     </p>
     <button ion-button color="light" round class="-continue" (click)="disableSecure()">Continue</button>
   </modal>
-
-  <div *ngIf="display" class="table sky-container" [ngClass]="{ blurred: !storageAvailable }">
-    <div class="cell">
-      <div class="pin-instructions" *ngIf="status === 2">
-        <h2>Set a PIN #</h2>
-        <p>This PIN # will used to open the wallet. Don't forget it; if you do, you may lose access to your mobile wallet.</p>
-      </div>
-      <div class="pin-instructions" *ngIf="status === 3">
-        <h2>Confirm PIN #</h2>
-        <p>Enter your pin once more to continue.</p>
-      </div>
-      <div id="logo" *ngIf="status < 2">
-        <img src="assets/logo/logo-white.png">
-      </div>
-
-      <ion-grid id="fields" [ngClass]="{'miss': showError}">
-        <ion-row>
-          <ion-col col-3 [ngClass]="{'active': pin.length >= 1}">
-            <span></span>
-          </ion-col>
-          <ion-col col-3 [ngClass]="{'active': pin.length >= 2}">
-            <span></span>
-          </ion-col>
-          <ion-col col-3 [ngClass]="{'active': pin.length >= 3}">
-            <span></span>
-          </ion-col>
-          <ion-col col-3 [ngClass]="{'active': pin.length >= 4}">
-            <span></span>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-      <ion-grid id="numbers">
-        <ion-row>
-          <ion-col col-4>
-            <div (click)="pressNumber(1)">1</div>
-          </ion-col>
-          <ion-col col-4>
-            <div (click)="pressNumber(2)">2</div>
-          </ion-col>
-          <ion-col col-4>
-            <div (click)="pressNumber(3)">3</div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-4>
-            <div (click)="pressNumber(4)">4</div>
-          </ion-col>
-          <ion-col col-4>
-            <div (click)="pressNumber(5)">5</div>
-          </ion-col>
-          <ion-col col-4>
-            <div (click)="pressNumber(6)">6</div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-4>
-            <div (click)="pressNumber(7)">7</div>
-          </ion-col>
-          <ion-col col-4>
-            <div (click)="pressNumber(8)">8</div>
-          </ion-col>
-          <ion-col col-4>
-            <div (click)="pressNumber(9)">9</div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-4></ion-col>
-          <ion-col col-4>
-            <div (click)="pressNumber(0)">0</div>
-          </ion-col>
-          <ion-col col-4>
-            <div (click)="pressBack()">
-              <ion-icon name="backspace"></ion-icon>
+  <ion-slides #slides (ionSlideWillChange)="onSlideChangeStart($event)" pager>
+    <ion-slide>
+      <div *ngIf="display" class="table sky-container" [ngClass]="{ blurred: !storageAvailable }">
+        <div class="cell">
+          <div class="cell-header">
+            <div class="pin-instructions" *ngIf="status === 2">
+              <h2>Set a PIN #</h2>
+              <p>This PIN # will used to open the wallet. Don't forget it; if you do, you may lose access to your mobile wallet.</p>
             </div>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </div>
-  </div>
+            <div class="pin-instructions" *ngIf="status === 3">
+              <h2>Confirm PIN #</h2>
+              <p>Enter your pin once more to continue.</p>
+            </div>
+            <div id="logo" *ngIf="status < 2">
+              <img src="assets/logo/logo-white.png">
+            </div>
+          </div>
+
+          <ion-grid id="fields" [ngClass]="{'miss': showError}">
+            <ion-row>
+              <ion-col col-3 [ngClass]="{'active': pin.length >= 1}">
+                <span></span>
+              </ion-col>
+              <ion-col col-3 [ngClass]="{'active': pin.length >= 2}">
+                <span></span>
+              </ion-col>
+              <ion-col col-3 [ngClass]="{'active': pin.length >= 3}">
+                <span></span>
+              </ion-col>
+              <ion-col col-3 [ngClass]="{'active': pin.length >= 4}">
+                <span></span>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+
+          <ion-grid id="numbers">
+            <ion-row>
+              <ion-col col-4>
+                <div (click)="pressNumber(1)">1</div>
+              </ion-col>
+              <ion-col col-4>
+                <div (click)="pressNumber(2)">2</div>
+              </ion-col>
+              <ion-col col-4>
+                <div (click)="pressNumber(3)">3</div>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-4>
+                <div (click)="pressNumber(4)">4</div>
+              </ion-col>
+              <ion-col col-4>
+                <div (click)="pressNumber(5)">5</div>
+              </ion-col>
+              <ion-col col-4>
+                <div (click)="pressNumber(6)">6</div>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-4>
+                <div (click)="pressNumber(7)">7</div>
+              </ion-col>
+              <ion-col col-4>
+                <div (click)="pressNumber(8)">8</div>
+              </ion-col>
+              <ion-col col-4>
+                <div (click)="pressNumber(9)">9</div>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col col-4>
+                <button (click)="changeStatus()">s</button>
+              </ion-col>
+              <ion-col col-4>
+                <div (click)="pressNumber(0)">0</div>
+              </ion-col>
+              <ion-col col-4>
+                <div (click)="pressBack()">
+                  <ion-icon name="backspace"></ion-icon>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </div>
+      </div>
+    </ion-slide>
+
+    <ion-slide>
+      <div class="sky-container">
+        <div class="cell-header">
+          <div class="pin-instructions">
+            <h2>Create a wallet</h2>
+            <p>If you don’t yet have a wallet, generate a seed and we’ll create one for you. If you already have a wallet, enter
+              the seed below and load it.</p>
+          </div>
+          <div class="cell-body">
+            <ion-toggle checked="false">New</ion-toggle>
+          </div>
+        </div>
+      </div>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
